//cmd: protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/auth.proto
syntax = "proto3";

option go_package = ".;proto";

service AuthService {
  rpc GetAuthUrl (GetAuthUrlRequest) returns (GetAuthUrlResponse);
}

message GetAuthUrlRequest {
  string authType = 1;

  enum AuthType {
    LOCAL = 0;
    FACEBOOK = 1;
    GOOGLE = 2;
    TWITTER = 3;
  }
}

message GetAuthUrlResponse {
  string authUrl = 1;
}